--- a/registration.html
+++ b/registration.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
-    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="registration.css">
-
 </head>
 <body>
     <div class="form-container">
@@ -37,7 +36,7 @@
         </form>
     </div>
 
-    <script src="registration.js"></script>
-
+    <script src="registration_js/translate.js"></script>
+    <script src="registration_js/registration.js"></script>
 </body>
 </html>
