--- a/registration.html
+++ b/registration.html
@@ -15,22 +15,10 @@
             <input type="text" id="name" name="name" required>
 
             <label for="logo" id="label-logo">Team Logo (URL):</label>
-            <input type="text" id="logo" name="logo" required>
+            <input type="text" id="logo" name="logo">
 
             <label for="prime" id="label-prime">Prime Time:</label>
             <input type="text" id="prime" name="prime" required>
-
-            <label for="leader" id="label-leader">Leader (Username):</label>
-            <input type="text" id="leader" name="leader" required>
-
-            <label for="members" id="label-members">Members (Comma separated):</label>
-            <input type="text" id="members" name="members" required>
-
-            <label for="manager" id="label-manager">Manager (Username):</label>
-            <input type="text" id="manager" name="manager" required>
-
-            <label for="trainer" id="label-trainer">Trainer (Username):</label>
-            <input type="text" id="trainer" name="trainer" required>
 
             <button type="submit" id="submit-btn">Submit</button>
         </form>
