--- a/edit.html
+++ b/edit.html
@@ -14,8 +14,8 @@
             <label for="name" id="label-name">Team Name:</label>
             <input type="text" id="name" name="name">
 
-            <label for="logo" id="label-logo">Team Logo (URL):</label>
-            <input type="text" id="logo" name="logo">
+            <label for="logo" id="label-logo">Team Logo:</label>
+            <input type="file" id="logo" name="logo" accept="image/*">
 
             <label for="prime" id="label-prime">Prime Time:</label>
             <input type="text" id="prime" name="prime">
