--- a/registration.html
+++ b/registration.html
@@ -15,7 +15,7 @@
             <input type="text" id="name" name="name" required>
 
             <label for="logo" id="label-logo">Team Logo:</label>
-            <input type="file" id="logo" name="logo" accept="image/*" onchange="validateSize(this)">
+            <input type="file" id="logo" name="logo" accept="image/*">
 
             <label for="prime" id="label-prime">Prime Time:</label>
             <input type="text" id="prime" name="prime" required>
